Fixed missing imports

--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -23,7 +23,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,9 @@
     "import cv2\n",
     "\n",
     "from sklearn.svm import SVC,NuSVC\n",
-    "from sklearn.model_selection import GridSearchCV"
+    "from sklearn.model_selection import GridSearchCV\n",
+    "from sklearn.model_selection import RandomizedSearchCV\n",
+    "from scipy.stats import reciprocal, uniform"
    ]
   },
   {
