Distributed training for knn and cnn

--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -383,25 +383,46 @@
     }
    ],
    "source": [
-    "#KNN Classifier \n",
-    "#List Hyperparameters that we want to tune.\n",
-    "leaf_size = list(range(1,20))\n",
-    "n_neighbors = list(range(1,20))\n",
-    "p=[1,2]\n",
-    "#Convert to dictionary\n",
-    "hyperparameters = dict(leaf_size=leaf_size, n_neighbors=n_neighbors, p=p)\n",
-    "#Create new KNN object\n",
-    "knn_2 = KNeighborsClassifier()\n",
-    "#Use GridSearch\n",
-    "clf = GridSearchCV(knn_2, hyperparameters, cv=10)\n",
-    "#Fit the model\n",
-    "best_model = clf.fit(x_val,y_val)\n",
-    "#Print The value of best Hyperparameters\n",
-    "print('Best leaf_size:', best_model.best_estimator_.get_params()['leaf_size'])\n",
-    "print('Best p:', best_model.best_estimator_.get_params()['p'])\n",
-    "print('Best n_neighbors:', best_model.best_estimator_.get_params()['n_neighbors'])\n",
-    "y_pred = best_model.predict(x_test)\n",
-    "accuracy_score(y_test, y_pred)"
+    "checkpoint_dir = \"./ckpt\"\n",
+    "if not os.path.exists(checkpoint_dir):\n",
+    "    os.makedirs(checkpoint_dir)\n",
+    "def get_compiled_model():knn_clf = KNeighborsClassifier()\n",
+    "    param_distributions = {\"leaf_size\": uniform(1,20),\"n_neighbors\": uniform(1,20),\"p\":uniform(1,2)}\n",
+    "    rnd_search_cv = RandomizedSearchCV(knn_clf, param_distributions, n_iter=10, verbose=2, cv=3)\n",
+    "    rnd_search_cv.fit(x_train, y_train)\n",
+    "    rnd_search_cv.best_estimator_\n",
+    "    rnd_search_cv.best_score_\n",
+    "    return rnd_search_cv.best_estimator_\n",
+    "\n",
+    "def make_or_restore_model():\n",
+    "    #either restore the latest model or create a fresh one if theres no checkpoint available\n",
+    "    checkpoints = [checkpoint_dir + \"/\" + name for name in os.listdir(checkpoint_dir)]\n",
+    "    if checkpoints:\n",
+    "        latest_checkpoint = max(checkpoints,key=os.path.getctime)\n",
+    "        print(\"restoring from\", latest_checkpoint)\n",
+    "        return keras.models.load_model(latest_checkpoint)\n",
+    "    print(\"Creating a new model\")\n",
+    "    return get_compiled_model()\n",
+    "\n",
+    "def run_training():\n",
+    "    strategy = tf.distribute.MirroredStrategy()\n",
+    "    with strategy.scope():\n",
+    "        model = make_or_restore_model()\n",
+    "    callbacks = [\n",
+    "        # this callback saves a saved model every epoch\n",
+    "        # we can include the current epoch in the folder name\n",
+    "        keras.callbacks.ModelCheckpoint(\n",
+    "            filepath=checkpoint_dir + \"/ckpt-{epoch}\",save_freq=\"epoch\"\n",
+    "        )\n",
+    "    ]\n",
+    "    model.fit(x_train,y_train)\n",
+    "    return model\n",
+    "\n",
+    "#the first run creates the model\n",
+    "run_training()\n",
+    "\n",
+    "#the second time you call it will pick off from the last saved point\n",
+    "run_training()"
    ]
   },
   {
@@ -582,48 +603,78 @@
     }
    ],
    "source": [
-    "#build a DCNN real quick\n",
-    "num_epochs = 50\n",
+    "num_epochs = 100\n",
     "\n",
     "def build_model(num_classes,output_activation=None):\n",
     "    inputs = keras.Input(shape=(140,54,1),name='img')\n",
-    "\n",
-    "    x = layers.Conv2D(filters=8, kernel_size=(3,3),padding='same',activation='relu')(inputs)\n",
-    "    x = layers.Conv2D(filters=8,kernel_size=(3,3),padding='same',activation=None)(x)\n",
-    "\n",
+    "    x = layers.Conv2D(filters=8, kernel_size=(5,5), padding='same', activation='relu')(inputs)\n",
+    "    x = layers.Conv2D(filters=16, kernel_size=(5,5), padding='same', activation=None)(x)\n",
+    "    # batch normalisation, before the non-linearity\n",
     "    x = layers.BatchNormalization()(x)\n",
     "    x = layers.Activation('relu')(x)\n",
-    "\n",
-    "    x = layers.SpatialDropout2D(0.2)(x)\n",
-    "\n",
-    "    x = layers.MaxPool2D(pool_size=(2,2))(x)\n",
-    "\n",
-    "    x = layers.Conv2D(filters=8, kernel_size=(3,3),padding='same',activation='relu')(x)\n",
-    "    x = layers.Conv2D(filters=8,kernel_size=(3,3),padding='same',activation=None)(x)\n",
-    "\n",
+    "    # spatial dropout, this will drop whole kernels, i.e. 20% of our 3x3 filters will be dropped out rather\n",
+    "    # than dropping out 20% of the invidual pixels\n",
+    "    x = layers.SpatialDropout2D(0.35)(x) #removes some of the learned features\n",
+    "    # max pooling, 2x2, which will downsample the image\n",
+    "    x = layers.MaxPool2D(pool_size=(4, 4))(x) #makes images softer to remove slight changes to reduce feature maps - downsampling and keeps details\n",
+    "    \n",
+    "    x = layers.Conv2D(filters=8, kernel_size=(5,5), padding='same', activation='relu')(inputs)\n",
+    "    x = layers.Conv2D(filters=16, kernel_size=(5,5), padding='same', activation=None)(x)\n",
+    "    # batch normalisation, before the non-linearity\n",
     "    x = layers.BatchNormalization()(x)\n",
     "    x = layers.Activation('relu')(x)\n",
-    "\n",
-    "    x = layers.SpatialDropout2D(0.2)(x)\n",
-    "\n",
-    "    x = layers.MaxPool2D(pool_size=(2,2))(x)\n",
-    "\n",
-    "    x = layers.Conv2D(filters=8, kernel_size=(3,3),padding='same',activation='relu')(x)\n",
-    "    x = layers.Conv2D(filters=8,kernel_size=(3,3),padding='same',activation=None)(x)\n",
-    "\n",
+    "    # spatial dropout, this will drop whole kernels, i.e. 20% of our 3x3 filters will be dropped out rather\n",
+    "    # than dropping out 20% of the invidual pixels\n",
+    "    x = layers.SpatialDropout2D(0.35)(x) #removes some of the learned features\n",
+    "    # max pooling, 2x2, which will downsample the image\n",
+    "    x = layers.MaxPool2D(pool_size=(4, 4))(x) #makes images softer to remove slight changes to reduce feature maps - downsampling and keeps details\n",
+    "    \n",
+    "    x = layers.Conv2D(filters=8, kernel_size=(5,5), padding='same', activation='relu')(inputs)\n",
+    "    x = layers.Conv2D(filters=16, kernel_size=(5,5), padding='same', activation=None)(x)\n",
+    "    # batch normalisation, before the non-linearity\n",
     "    x = layers.BatchNormalization()(x)\n",
     "    x = layers.Activation('relu')(x)\n",
+    "    # spatial dropout, this will drop whole kernels, i.e. 20% of our 3x3 filters will be dropped out rather\n",
+    "    # than dropping out 20% of the invidual pixels\n",
+    "    x = layers.SpatialDropout2D(0.35)(x) #removes some of the learned features\n",
+    "    # max pooling, 2x2, which will downsample the image\n",
+    "    x = layers.MaxPool2D(pool_size=(4, 4))(x) #makes images softer to remove slight changes to reduce feature maps - downsampling and keeps details\n",
+    "    \n",
+    "    x = layers.Conv2D(filters=8, kernel_size=(5,5), padding='same', activation='relu')(inputs)\n",
+    "    x = layers.Conv2D(filters=16, kernel_size=(5,5), padding='same', activation=None)(x)\n",
+    "    # batch normalisation, before the non-linearity\n",
+    "    x = layers.BatchNormalization()(x)\n",
+    "    x = layers.Activation('relu')(x)\n",
+    "    # spatial dropout, this will drop whole kernels, i.e. 20% of our 3x3 filters will be dropped out rather\n",
+    "    # than dropping out 20% of the invidual pixels\n",
+    "    x = layers.SpatialDropout2D(0.35)(x) #removes some of the learned features\n",
+    "    # max pooling, 2x2, which will downsample the image\n",
+    "    x = layers.MaxPool2D(pool_size=(4, 4))(x) #makes images softer to remove slight changes to reduce feature maps - downsampling and keeps details\n",
+    "    \n",
+    "    x = layers.Conv2D(filters=8, kernel_size=(5,5), padding='same', activation='relu')(inputs)\n",
+    "    x = layers.Conv2D(filters=16, kernel_size=(5,5), padding='same', activation=None)(x)\n",
+    "    # batch normalisation, before the non-linearity\n",
+    "    x = layers.BatchNormalization()(x)\n",
+    "    x = layers.Activation('relu')(x)\n",
+    "    # spatial dropout, this will drop whole kernels, i.e. 20% of our 3x3 filters will be dropped out rather\n",
+    "    # than dropping out 20% of the invidual pixels\n",
+    "    x = layers.SpatialDropout2D(0.35)(x) #removes some of the learned features\n",
+    "    # max pooling, 2x2, which will downsample the image\n",
+    "    x = layers.MaxPool2D(pool_size=(4, 4))(x) #makes images softer to remove slight changes to reduce feature maps - downsampling and keeps details\n",
+    "    # rinse and repeat with 2D convs, batch norm, dropout and max pool\n",
     "\n",
-    "    x = layers.SpatialDropout2D(0.2)(x)\n",
-    "\n",
+    "    # flatten layer\n",
     "    x = layers.Flatten()(x)\n",
-    "\n",
-    "    x = layers.Dense(256,activation='relu')(x)\n",
+    "    # we'll use a couple of dense layers here, mainly so that we can show what another dropout layer looks like \n",
+    "    # in the middle\n",
+    "    x = layers.Dense(256, activation='relu')(x)\n",
     "    x = layers.Dropout(0.5)(x)\n",
-    "    x = layers.Dense(64,activation='relu')(x)\n",
-    "    outputs = layers.Dense(num_classes,activation=output_activation)(x)\n",
+    "    x = layers.Dense(64, activation='relu')(x)\n",
+    "    # the output\n",
+    "    outputs = layers.Dense(258,activation=output_activation)(x)\n",
     "\n",
-    "    model_cnn = keras.Model(inputs=inputs, outputs=outputs, name='CNN')\n",
+    "    # build the model, and print a summary\n",
+    "    model_cnn = keras.Model(inputs=inputs, outputs=outputs, name='cnn_model')\n",
     "\n",
     "    return model_cnn\n",
     "\n",
@@ -730,13 +781,47 @@
     }
    ],
    "source": [
-    "model_cnn.compile(loss=tf.keras.losses.SparseCategoricalCrossentropy(),\n",
-    "optimizer=keras.optimizers.Adam(),\n",
-    "metrics=['accuracy'])\n",
-    "history = model_cnn.fit(x_train,y_train,\n",
-    "batch_size=256,\n",
-    "epochs=num_epochs,\n",
-    "validation_data=(x_test,y_test))"
+    "checkpoint_dir = \"./ckpt\"\n",
+    "if not os.path.exists(checkpoint_dir):\n",
+    "    os.makedirs(checkpoint_dir)\n",
+    "def get_compiled_model():\n",
+    "    build_model(257)\n",
+    "\n",
+    "def make_or_restore_model():\n",
+    "    #either restore the latest model or create a fresh one if theres no checkpoint available\n",
+    "    checkpoints = [checkpoint_dir + \"/\" + name for name in os.listdir(checkpoint_dir)]\n",
+    "    if checkpoints:\n",
+    "        latest_checkpoint = max(checkpoints,key=os.path.getctime)\n",
+    "        print(\"restoring from\", latest_checkpoint)\n",
+    "        return keras.models.load_model(latest_checkpoint)\n",
+    "    print(\"Creating a new model\")\n",
+    "    return get_compiled_model()\n",
+    "\n",
+    "def run_training():\n",
+    "    strategy = tf.distribute.MirroredStrategy()\n",
+    "    with strategy.scope():\n",
+    "        model = make_or_restore_model()\n",
+    "    callbacks = [\n",
+    "        # this callback saves a saved model every epoch\n",
+    "        # we can include the current epoch in the folder name\n",
+    "        keras.callbacks.ModelCheckpoint(\n",
+    "            filepath=checkpoint_dir + \"/ckpt-{epoch}\",save_freq=\"epoch\"\n",
+    "        )\n",
+    "    ]\n",
+    "    model_cnn.compile(loss=tf.keras.losses.SparseCategoricalCrossentropy(),\n",
+    "    optimizer=keras.optimizers.Adam(),\n",
+    "    metrics=['accuracy'])\n",
+    "    history = model_cnn.fit(x_train,y_train,\n",
+    "    batch_size=256,\n",
+    "    epochs=num_epochs,\n",
+    "    validation_data=(x_test,y_test))\n",
+    "\n",
+    "\n",
+    "#the first run creates the model\n",
+    "run_training()\n",
+    "\n",
+    "#the second time you call it will pick off from the last saved point\n",
+    "run_training()"
    ]
   },
   {
